# blur

./: .clang_complete  .gitignore  CMakeLists.txt  Makefile  build.sh  clean.sh  compile_shaders.sh  debug.sh  run.sh  sanitize.sh  validate.sh
doc/: graph.dot  simple.dot
src/: blur.c  error.h  files  keypoll.h  keypoll_linux.c  main.c  render.c  render.h  render_VK.h  render_VK_data.c  render_VK_device.c  render_VK_memory.c  render_VK_pass.c  render_sw.c  render_vk.c  render_vk.h  render_vk_device.c  render_vk_instance.c  render_vk_memory.c  render_vk_memory.h  render_vk_pass.c  render_vk_pipeline.c  render_vk_shader.c  shaders.h  tortuga.c  trig.c  trig.h  vector.c  vector.h  window.h  window_linux.c  xrand.c  xrand.h
src/shaders/: default.vert  default_frag.h  default_vert.h  default_vert.vert  fdefault.h  vdefault.h
